<resources>
    <string name="app_name">Brill</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="username_text">User name</string>
    <string name="useremail_text">User email</string>
    <string name="userpassword_text">User password</string>
    <string name="title_activity_idea_list">IdeaList</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_idea_list">View ideas</string>
    <string name="action_view_locations_list">View locations</string>
    <string name="action_new_idea">New idea</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_levels">Levels</string>
    <string name="brill_ideas_text">Brill ideas</string>
    <string name="brill_ideas_count">Count</string>
    <string name="level_indicator_text">Level</string>
    <string name="level_value">Level value</string>
    <string name="profile_text">Profile</string>
    <string name="your_idea_text">Your idea</string>
    <string name="save_idea_button">Save idea</string>
    <string name="place_picker_text">Get location</string>
    <string name="get_location">Get location</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_take_picture">Take picture</string>
    <string name="action_view_profile">Your profile</string>
    <string name="add_an_idea">Add a Brill idea</string>
    <string name="add_your_location">Add your location</string>
    <string name="track_your_progress">Track your productivity</string>
    <string name="brill_intro">Excellent; marvellous.</string>
    <string name="brill_tagline">The best idea tracking app for Entrpreneurs</string>
    <string name="swipe_left_text">Swipe left</string>
    <string name="save_location_btn">Save location</string>
</resources>
