<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.christophergovenderkubiec.brill.IdeaList">
    <item
        android:id="@+id/action_view_idea_list"
        android:orderInCategory="100"
        android:title="View ideas"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_idea"
        android:orderInCategory="100"
        android:title="@string/action_new_idea"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_picture"
        android:orderInCategory="100"
        android:title="@string/action_take_picture"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_view_profile"
        app:showAsAction="never" />
</menu>
