<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.christophergovenderkubiec.brill.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="268dp"
        android:layout_height="78dp"
        app:srcCompat="@drawable/brill_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="56dp"
        android:layout_marginRight="40dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="Register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/register_button"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="Login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:text="@string/login_button"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="Excellent; marvellous"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:text="@string/brill_intro" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="The best idea tracking app for Entrepreneurs"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/Violet"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/brill_tagline" />
</android.support.constraint.ConstraintLayout>
